# E-Commerce

./: .gitignore  Makefile  README.rst  pyproject.toml
DjangoMart/: asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  views.py
templates/core/: index.html
