[tool.poetry]
name = "djangomart"
version = "0.1.0"
description = "This project is an e-commerce website built using Django, a high-level Python Web framework. The website provides a user-friendly interface for customers to browse and purchase products."
authors = ["Osama Khan <khanosama783@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
